# MarkdownRAG

./: .gitignore  BUILD(初级版v1).md  RAG增强方案(待审阅).md  README.md  USAGE.md  config.yaml  pyproject.toml  requirements.txt
backup/: BUILD.md  方案对比分析:自建 RAG vs 主流框架(讨论稿).txt
docs/superpowers/plans/: 2026-06-20-t6-multi-source-wiki.md  2026-06-21-mcp-server.md
docs/superpowers/specs/: 2026-06-20-t6-multi-source-wiki-design.md  2026-06-21-mcp-server-design.md
eval/: queries.wiki.yaml  queries.yaml
notes/: sample_maotai.md  sample_muyuan.md  芒格2023年股东大会问答.md
src/: __init__.py  chunker.py  cleaner.py  config.py  context_builder.py  embedder.py  evaluate.py  hash_utils.py  ingest.py  loader.py  mcp_server.py  metadata_store.py  reranker.py  search.py  sqlite_metadata_store.py  vector_store.py
tests/: test_chunker.py  test_cleaner.py  test_config.py  test_context_builder.py  test_evaluate.py  test_incremental_ingest.py  test_loader.py  test_mcp_server.py  test_metadata_store.py  test_reranker.py  test_search.py  test_vector_store.py
