[project]
name = "local-md-rag"
version = "0.1.0"
description = "Local Markdown RAG for investment notes."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "chromadb",
    "markdown-it-py",
    "pyyaml",
    "rich",
    "sentence-transformers",
    "tqdm",
    "typer",
]

[dependency-groups]
dev = [
    "pytest",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
