[project]
name = "local-md-rag"
version = "0.1.0"
description = "Local Markdown RAG for investment notes."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "chromadb",
    "markdown-it-py",
    "mcp",
    "pyyaml",
    "rich",
    "sentence-transformers",
    "torch",
    "tqdm",
    "typer",
]

[dependency-groups]
dev = [
    "pytest",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]

# AMD 平台:torch 走 CPU 版,避免拉取 NVIDIA/CUDA 包
# 国内访问 pytorch.org 不稳,改用 SJTU pytorch 轮子镜像(官方源:download.pytorch.org/whl/cpu)
[tool.uv.sources]
torch = { index = "pytorch-cpu" }

[[tool.uv.index]]
name = "pytorch-cpu"
url = "https://mirror.sjtu.edu.cn/pytorch-wheels/cpu"
explicit = true
